--- a/MarsLanderSimulator/MarsLanderSimulator.vcxproj
+++ b/MarsLanderSimulator/MarsLanderSimulator.vcxproj
@@ -20,11 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Control.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Simulator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Control.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="Simulator.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
