--- a/MarsLanderSimulator/MarsLanderSimulator.vcxproj
+++ b/MarsLanderSimulator/MarsLanderSimulator.vcxproj
@@ -19,14 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Axial.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Roll.cpp" />
     <ClCompile Include="Simulator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Axial.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Roll.h" />
     <ClInclude Include="Simulator.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
