--- a/MarsLanderSimulator/MarsLanderSimulator.vcxproj.filters
+++ b/MarsLanderSimulator/MarsLanderSimulator.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Roll.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Axial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Control.h">
@@ -36,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Roll.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Axial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
