--- a/MarsLanderSimulator/MarsLanderSimulator.vcxproj
+++ b/MarsLanderSimulator/MarsLanderSimulator.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Axial.cpp" />
     <ClCompile Include="Control.cpp" />
+    <ClCompile Include="DataLog.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Roll.cpp" />
@@ -29,6 +30,7 @@
   <ItemGroup>
     <ClInclude Include="Axial.h" />
     <ClInclude Include="Control.h" />
+    <ClInclude Include="DataLog.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Roll.h" />
     <ClInclude Include="Simulator.h" />
