--- a/MarsLanderSimulator/MarsLanderSimulator.vcxproj.filters
+++ b/MarsLanderSimulator/MarsLanderSimulator.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Axial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DataLog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Control.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Axial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DataLog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
